--- a/index.html
+++ b/index.html
@@ -19,56 +19,57 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
-    <div id="time-9" class="time-block row p-4">
+  <div class="container time-slots">
+    <div id="9" class="time-block row p-4">
       <div class="hour col">9:00 AM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-10" class="time-block row p-4">
+    <div id="10" class="time-block row p-4">
       <div class="hour col">10:00 AM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-11" class="time-block row p-4">
+    <div id="11" class="time-block row p-4">
       <div class="hour col">11:00 AM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-12" class="time-block row p-4">
+    <div id="12" class="time-block row p-4">
       <div class="hour col">12:00 PM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-13" class="time-block row p-4">
+    <div id="13" class="time-block row p-4">
       <div class="hour col">1:00 PM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-14" class="time-block row p-4">
+    <div id="14" class="time-block row p-4">
       <div class="hour col">2:00 PM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-15" class="time-block row p-4">
+    <div id="15" class="time-block row p-4">
       <div class="hour col">3:00 PM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-16" class="time-block row p-4">
+    <div id="16" class="time-block row p-4">
       <div class="hour col">4:00 PM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
-    <div id="time-17" class="time-block row p-4">
+    <div id="17" class="time-block row p-4">
       <div class="hour col">5:00 PM</div>
       <input type="text" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
