--- a/index.html
+++ b/index.html
@@ -19,50 +19,95 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container time-slots">
-    <div id="9" class="time-block row p-4">
+  <div class="container time-slots mb-5">
+    <div id="05" class="time-block row p-4">
+      <div class="hour col">5:00 AM</div>
+      <input type="text" id="task-05" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="06" class="time-block row p-4">
+      <div class="hour col">6:00 AM</div>
+      <input type="text" id="task-06" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="07" class="time-block row p-4">
+      <div class="hour col">7:00 AM</div>
+      <input type="text" id="task-07" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="08" class="time-block row p-4">
+      <div class="hour col">8:00 AM</div>
+      <input type="text" id="task-08" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="09" class="time-block row p-4">
       <div class="hour col">9:00 AM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-09" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="10" class="time-block row p-4">
       <div class="hour col">10:00 AM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-10" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="11" class="time-block row p-4">
       <div class="hour col">11:00 AM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-11" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="12" class="time-block row p-4">
       <div class="hour col">12:00 PM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-12" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="13" class="time-block row p-4">
       <div class="hour col">1:00 PM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-13" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="14" class="time-block row p-4">
       <div class="hour col">2:00 PM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-14" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="15" class="time-block row p-4">
       <div class="hour col">3:00 PM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-15" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="16" class="time-block row p-4">
       <div class="hour col">4:00 PM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-16" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
     <div id="17" class="time-block row p-4">
       <div class="hour col">5:00 PM</div>
-      <input type="text" class="description task col-9"></input>
+      <input type="text" id="task-17" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="18" class="time-block row p-4">
+      <div class="hour col">6:00 PM</div>
+      <input type="text" id="task-18" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="19" class="time-block row p-4">
+      <div class="hour col">7:00 PM</div>
+      <input type="text" id="task-19" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="20" class="time-block row p-4">
+      <div class="hour col">8:00 PM</div>
+      <input type="text" id="task-20" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="21" class="time-block row p-4">
+      <div class="hour col">9:00 PM</div>
+      <input type="text" id="task-21" class="description task col-9"></input>
+      <button class="saveBtn col">Save</button>
+    </div>
+    <div id="22" class="time-block row p-4">
+      <div class="hour col">10:00 PM</div>
+      <input type="text" id="task-22" class="description task col-9"></input>
       <button class="saveBtn col">Save</button>
     </div>
   </div>
